WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80436
writable/configurable not respected for some properties of Function/String/Arguments
https://bugs.webkit.org/show_bug.cgi?id=80436
Summary
writable/configurable not respected for some properties of Function/String/Ar...
Gavin Barraclough
Reported
2012-03-06 11:43:55 PST
Special properties should behave like regular properties.
Attachments
Fix
(18.32 KB, patch)
2012-03-06 12:01 PST
,
Gavin Barraclough
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2012-03-06 12:01:45 PST
Created
attachment 130425
[details]
Fix
Gavin Barraclough
Comment 2
2012-03-06 12:20:18 PST
Fixed in
r109949
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug