writable/configurable not respected for some properties of Function/String/Arguments https://bugs.webkit.org/show_bug.cgi?id=80436

Reviewed by Oliver Hunt.

Special properties should behave like regular properties.

Source/JavaScriptCore:

* runtime/Arguments.cpp:
(JSC::Arguments::defineOwnProperty):
    - Mis-nested logic for making read-only properties non-live.
* runtime/JSFunction.cpp:
(JSC::JSFunction::put):
    - arguments/length/caller are non-writable, non-configurable - reject appropriately.
(JSC::JSFunction::deleteProperty):
    - Attempting to delete prototype/caller should fail.
(JSC::JSFunction::defineOwnProperty):
    - Ensure prototype is reified on attempt to reify it.
    - arguments/length/caller are non-writable, non-configurable - reject appropriately.
* runtime/JSFunction.h:
    - added declaration for defineOwnProperty.
(JSFunction):
* runtime/StringObject.cpp:
(JSC::StringObject::put):
    - length is non-writable, non-configurable - reject appropriately.

LayoutTests:

* fast/js/mozilla/strict/10.6-expected.txt:
* fast/js/mozilla/strict/15.3.5.1-expected.txt:
* fast/js/mozilla/strict/15.3.5.2-expected.txt:
* fast/js/mozilla/strict/15.5.5.1-expected.txt:
    - Check in passing test results.
* fast/js/script-tests/arguments.js:
    - Fix test - this was asserting incorrect behaviour.



Canonical link: https://commits.webkit.org/97581@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109949 268f45cc-cd09-0410-ab3c-d52691b4dbfc