Source/JavaScriptCore/runtime/Arguments.cpp
@@ -320,12 +320,15 @@ bool Arguments::defineOwnProperty(JSObject* object, ExecState* exec, const Ident
             if (descriptor.isAccessorDescriptor()) {
                 // i. Call the [[Delete]] internal method of map passing P, and false as the arguments.
                 thisObject->d->deletedArguments[i] = true;
-            } else if (descriptor.value()) { // b. Else i. If Desc.[[Value]] is present, then
+            } else { // b. Else
+                // i. If Desc.[[Value]] is present, then
                 // 1. Call the [[Put]] internal method of map passing P, Desc.[[Value]], and Throw as the arguments.
+                if (descriptor.value())
+                    thisObject->argument(i).set(exec->globalData(), thisObject, descriptor.value());
                 // ii. If Desc.[[Writable]] is present and its value is false, then
-                thisObject->argument(i).set(exec->globalData(), thisObject, descriptor.value());
+                // 1. Call the [[Delete]] internal method of map passing P and false as arguments.
                 if (descriptor.writablePresent() && !descriptor.writable())
-                    thisObject->d->deletedArguments[i] = true; // 1. Call the [[Delete]] internal method of map passing P and false as arguments.
+                    thisObject->d->deletedArguments[i] = true;
             }
         }
 
